--- a/landmark.ipynb
+++ b/landmark.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,12 +346,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch.nn as nn\n",
-    "import torch.functional as F\n",
+    "import torch.nn.functional as F\n",
     "\n",
     "# define the CNN architecture\n",
     "class Net(nn.Module):\n",
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +477,7 @@
     "        ###################\n",
     "        # set the module to training mode\n",
     "        model.train()\n",
-    "        for batch_idx, (data, target) in enumerate(loaders['train']):\n",
+    "        for batch_idx, (data, target) in enumerate(loaders_scratch['train']):\n",
     "            # move to GPU\n",
     "            if use_cuda:\n",
     "                data, target = data.cuda(), target.cuda()\n",
@@ -486,10 +486,19 @@
     "            ## record the average training loss, using something like\n",
     "            ## train_loss = train_loss + ((1 / (batch_idx + 1)) * (loss.data.item() - train_loss))\n",
     "\n",
-    "\n",
+    "            optimizer.zero_grad()\n",
     "            \n",
+    "            output = model(data)\n",
     "            \n",
+    "            loss = criterion(output, target)\n",
+    "            \n",
+    "            loss.backward()\n",
+    "            \n",
+    "            optimizer.step()\n",
     "\n",
+    "            train_loss += loss.item() * data.size(0)\n",
+    "            \n",
+    "        train_loss /= (1-validation_size) * train_size # 80% of all training data (validation is excluded)\n",
     "        ######################    \n",
     "        # validate the model #\n",
     "        ######################\n",
@@ -501,9 +510,14 @@
     "                data, target = data.cuda(), target.cuda()\n",
     "\n",
     "            ## TODO: update average validation loss \n",
-    "\n",
-    "\n",
+    "            output = model(data)\n",
     "            \n",
+    "            loss = criterion(output, target)\n",
+    "            \n",
+    "            valid_loss += loss.item() * data.size(0)\n",
+    "\n",
+    "        \n",
+    "        valid_loss /= validation_size * train_size # 20% of all training data \n",
     "            \n",
     "\n",
     "        # print training/validation statistics \n",
@@ -514,8 +528,9 @@
     "            ))\n",
     "\n",
     "        ## TODO: if the validation loss has decreased, save the model at the filepath stored in save_path\n",
-    "        \n",
-    "\n",
+    "        if valid_loss < valid_loss_min:\n",
+    "            torch.save(model.state_dict(), 'landmarks_model.pt')\n",
+    "    \n",
     "        \n",
     "        \n",
     "    return model"
@@ -534,11 +549,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/yazeed/anaconda3/envs/landmarks/lib/python3.6/site-packages/ipykernel_launcher.py:43: UserWarning: Implicit dimension choice for log_softmax has been deprecated. Change the call to include dim=X as an argument.\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'training_size' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-67-29e7a2bdd1bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# model_scratch.apply(custom_weight_init)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m model_scratch = train(20, loaders_scratch, model_scratch, get_optimizer_scratch(model_scratch),\n\u001b[0;32m---> 11\u001b[0;31m                       criterion_scratch, use_cuda, 'ignore.pt')\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-64-559d5ad90b41>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(n_epochs, loaders, model, optimizer, criterion, use_cuda, save_path)\u001b[0m\n\u001b[1;32m     54\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m         \u001b[0mvalid_loss\u001b[0m \u001b[0;34m/=\u001b[0m \u001b[0mvalidation_size\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mtraining_size\u001b[0m \u001b[0;31m# 20% of all training data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'training_size' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "def custom_weight_init(m):\n",
+    "# def custom_weight_init(m):\n",
     "    ## TODO: implement a weight initialization strategy\n",
     "\n",
     "    \n",
@@ -546,7 +581,7 @@
     "\n",
     "#-#-# Do NOT modify the code below this line. #-#-#\n",
     "    \n",
-    "model_scratch.apply(custom_weight_init)\n",
+    "# model_scratch.apply(custom_weight_init)\n",
     "model_scratch = train(20, loaders_scratch, model_scratch, get_optimizer_scratch(model_scratch),\n",
     "                      criterion_scratch, use_cuda, 'ignore.pt')"
    ]
